--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Voice Chat Example</title>
+    <title>zadechat</title>
     <style>
       .link {
         display: inline-block;
